--- a/constants/colors.scss
+++ b/constants/colors.scss
@@ -6,6 +6,7 @@ $c-background-lighterer: lighten($c-background, 22%);
 $c-background-darkish: darken($c-background, 2%);
 $c-background-dark: darken($c-background, 4%);
 $c-background-darker: darken($c-background, 6%);
+$c-background-darkest: darken($c-background, 10%);
 
 $c-text-dark: rgb(46, 46, 46);
 $c-text-light: rgb(215, 215, 215);
